add money multiplier section

--- a/article/sections/background.tex
+++ b/article/sections/background.tex
@@ -1,5 +1,15 @@
 \section{Background}
-All modern economies in the world rely on Fractional Reserve Banking (FRB). FRB is a system in which banks hold only a fraction of their customers' deposits as reserves and lend out the remaining funds to other customers. This system allows banks to serve as financial intermediaries between savers and borrowers, facilitating efficient capital allocation and promoting economic growth. In addition, fractional reserve banking enables banks to create new money through lending, expand the money supply, provide liquidity to the economy, and support payment services. However, this system also carries inherent risks, such as bank runs and financial instability, which necessitate the implementation of regulations and safeguards by central banks and authorities to maintain financial stability. 
+All modern economies in the world rely on Fractional Reserve Banking (FRB). 
+FRB is a system in which banks hold only a fraction of their customers' deposits as reserves and lend out the remaining funds to other customers. 
+This system allows banks to serve as financial intermediaries between savers and borrowers, 
+facilitating efficient capital allocation and promoting economic growth. 
+In addition, fractional reserve banking enables banks to create new money through lending, expand the money supply, provide liquidity to the economy, 
+and support payment services. However, this system also carries inherent risks, such as bank runs and financial instability, 
+which necessitate the implementation of regulations and safeguards by central banks and authorities to maintain financial stability. 
+
+How much money do banks create trough lending? This money multiplier effect is given by the simplified formula $\frac{1}{Reserve Ratio}$. 
+Pre-2020 large banks in america had a Reserve Ratio of 10\% \cite{FRBinvestopedia} giving a money multiplier of $\frac{1}{0.1}=10$. In this system banks could turn a \$1000 initial depoist into \$10000 by lending out \$900 of the initial depoist, the borrower spends the \$900, and the recipient deposits it back into the bank, which then lends out \$810 of this deposit, and the process continues.
+However this concept is criticized for beeing misleading as several countries does not set a legal reserve requirement \cite{chicagorevisited}, including the USA after 2020 \cite{FRBinvestopedia}. In addition \textcite{chicagorevisited} argue that this multiplier is a myth because when banks ask for reserves, the central bank obliges, leading to banks having almost full control of the money creation process.
 
 (There are many many problems with FRB, expand on them here)
 
@@ -15,7 +25,7 @@ Several approaches towards a 100RB system exist:
         \item Dramatic reduction of the (net) public debt.
         \item Dramatic reduction of private debt, as money creation no longer requires simultaneous debt creation.
         \end{enumerate}
-        \item The Chicago Plan Revisited \cite{ChicagoRevisited} from 2012 revisits the idea within the modern economy of the US and finds support for all of Fisher's (RD-1) claims. Additionally, output gains approach 10%, and steady-state inflation can drop to zero.
+        \item The Chicago Plan Revisited \cite{chicagorevisited} from 2012 revisits the idea within the modern economy of the US and finds support for all of Fisher's (RD-1) claims. Additionally, output gains approach 10%, and steady-state inflation can drop to zero.
         \item 2018 Swiss citizens’ (popular) initiative, ‘For crisis-safe money: Money creation by the National Bank only! (Sovereign Money Initiative)’ \cite{SwizzInitiative}. The initiative was defeated with 442k yes votes and 1379k no votes. The Federal Council and Parliament were against the initiative due to no precedent in any country for this type of system, a radical departure from the current system, which they claim to work well and has taken effective measures to improve financial stability, and that the national bank would receive an undesirable level of power.
         \item In the aftermath of the 2008 financial crisis in Iceland, a study on monetary and banking reform \cite{IcelandReport} was commissioned in 2015 by the prime minister. A Sovereign Money System was strongly considered, but no further action was taken.
 \end{itemize}
