--- a/article/thesis.bib
+++ b/article/thesis.bib
@@ -26,14 +26,23 @@ author = {{Federal Council of Switzerland}},
 title = {{Popular initiative "For crisis-safe money: Money creation by the National Bank only!"}},
 howpublished = {\url{https://www.admin.ch/gov/en/start/documentation/votes/20180610/Sovereign-Money-Initiative.html}},
 year = {2018},
-note = {(Accessed on 03/16/2023)}
+note = {(Accessed on 02/16/2023)}
 }
 
-@misc{icelandreport,
+@misc{IcelandReport,
 author = {Frosti Sigurjónsson},
 title = {MONETARY REFORM - A BETTER MONETARY SYSTEM FOR ICELAND},
 howpublished = {\url{https://www.government.is/media/forsaetisraduneyti-media/media/Skyrslur/monetary-reform.pdf}},
-month = {march},
+month = {March},
 year = {2015},
+note = {(Accessed on 02/16/2023)}
+}
+
+@misc{FRBinvestopedia,
+author = {Scott Nevil},
+title = {Fractional Reserve Banking: What It Is and How It Works},
+howpublished = {\url{https://www.investopedia.com/terms/f/fractionalreservebanking.asp}},
+month = {December},
+year = {2022},
 note = {(Accessed on 03/16/2023)}
 }
