--- a/article/thesis.bib
+++ b/article/thesis.bib
@@ -46,3 +46,44 @@ month = {December},
 year = {2022},
 note = {(Accessed on 03/16/2023)}
 }
+
+@book{fisherQTM,
+  title={The purchasing power of money: its' determination and relation to credit interest and crises},
+  author={Fisher, Irving},
+  year={1911},
+  publisher={Cosimo, Inc.}
+}
+
+@article{mcleay2014money,
+  title={Money creation in the modern economy},
+  author={McLeay, Michael and Radia, Amar and Thomas, Ryland},
+  journal={Bank of England quarterly bulletin},
+  pages={Q1},
+  year={2014}
+}
+
+@book{friedman2008monetary,
+  title={A monetary history of the United States, 1867-1960},
+  author={Friedman, Milton and Schwartz, Anna Jacobson},
+  volume={14},
+  year={2008},
+  publisher={Princeton University Press}
+}
+
+@misc{monetarismInvestopedia,
+author = {OSIKHOTSALI MOMOH},
+title = {What Is Monetarism? Theory, Formula, and Comparison to Keynesian Economics},
+howpublished = {\url{https://www.investopedia.com/terms/m/monetarism.asp}},
+month = {July},
+year = {2021},
+note = {(Accessed on 03/18/2023)}
+}
+
+@misc{MBSInvestopedia,
+author = {JULIA KAGAN},
+title = {Mortgage-Backed Securities (MBS) Definition: Types of Investment},
+howpublished = {\url{https://www.investopedia.com/terms/m/mbs.asp}},
+month = {February},
+year = {2023},
+note = {(Accessed on 03/18/2023)}
+}
