add a section about loans and debts

--- a/article/sections/background.tex
+++ b/article/sections/background.tex
@@ -15,7 +15,7 @@ There are two schools of toughts on money creation. Endogenous money theory posi
 
 In XXXX commercial banks realized that they could pacakge many individual mortages into a well diversified security. They could then earn a lot of money by selling this security, backed by mortages, as a low-risk investement. Not a bad idea, but as time went on, commercial banks and the shadow banking system, continously wanted increased profits on this system, issuing increaslingy risky mortages and manipulating rating agencies to classify the securities to give them the top rating. Then the shadow banking system made the problem much worse by placing massive and risky bets on these securites. The limitations set by regulation and oversight did not succeed in identifiying or stopping this problem neither did the web of incentives and reserve requirements (that the USA had at the time). (source)
 
-- Bailouts and why they incentivize increased risk...
+When components of the FRB system fail, the government, central banks, or other relevant entites step in to stop the failure before it can cascade into a catastrophich systemtic breakdown. \textcite{berger2020tarp} argues that the cost of bailouts is of a relativly low percentage compared to the potential cost of letting the crisis play out. However, since entites, such as commercial banks, know that there is a high probability they will recieve a bailout in the event of failure, they are incentivized to increase their apetite for risk to take on riskier and riskier investments for greater profit. The so called \textit{too big to fail} commerical banks are even more incentivized to increase their risk, because a failure of these banks would cause a catastropich systematic breakdown alone, and the governemnt or related entites will have no option but to bail them out.
 
 \subsection{Economic theory}
 Quantity Theory of Money (QTM) is an economic theory that suggests there is a direct relationship between the supply of money in an economy and the price level of goods and services. It argues that changes in the money supply will lead to proportional changes in the price level. The theory assumes that the velocity of money (the rate at which money is spent) and the level of real output are constant in the short run. \textcite{fisherQTM} defined the formula for the quantity theory of money as:
@@ -30,29 +30,57 @@ Monetarism is an economic theory that emphasizes the importance of controlling t
 Monetarists argue the money supply (M) drives the QTM equation. Essentially, alterations in M directly impact and dictate employment, inflation (P), and output (Y). \textcite{friedman2008monetary} assumed that velocity (V) remained constant, but monetarists today consider V to be readily predictable instead \cite{monetarismInvestopedia}. 
 
 
-\subsection{Loans}
+\subsection{Mortages and debt backed securites}
 
-Commercial banks issue mortages to borrowers and can then sell these mortages (at a discount??) to an investement company that packages and pools individual mortages into Mortage-Backed Securites (MBS). These securites have a fixed interest rate and monthly payouts based on the repayment of the underlying loans. Essentially banks act as a financial intermediary that lend investors money to homebuyers
+Commercial banks issue mortages to borrowers and can then sell these mortages (at a discount??) to an investement company that packages and pools individual mortages into Mortage-Backed Securites (MBS). These securites have a fixed interest rate and monthly payouts based on the repayment of the underlying loans. In this system, commercial banks act as a financial intermediary that lend investors money to homebuyers. 
+
+\textcite{MBSInvestopedia} states that this system works well if all parties do what they are supposed to. The commercial banks grant mortages based on reasonable standards, homeowner pays on time, and the credit rating agencies that review MBS perform proper due dilligence and assign a true rating based on the underlying loans and risk. However, obviously this process failed in 2007-8, where commercial banks gave mortages to anyone and everyone without due dilligence or proper risk assesments, homeowners who should not have recieved mortages could not pay their mortages and the mortages eventually defaulted, and credit rating agencies was incentivized or manipulated to not perform their due diligence and give the securites the highest rating even tough the underlying mortages was, in the words of the hit movie, The Big Short, \textit{dogshit} \cite{thebigshort}.
 
 % How many loans are sold into MBS? Does banks hold loans anymores? If they don't, how does this affect the creation of money?
+There are two types of MBS:
+\begin{itemize}
+    \item \textbf{Pass-Troughs}: A security where mortage payments are simply collected and passed on to the investors, typically with a specific maturity of 5, 15, or 30 years, depending on the velocity of repayements.
+    \item  \textbf{Collateralized Mortage Obligations (CMO)}: A sligthly more complex security that consist of multiple securites, or tranches, that have  different maturities, yields (profits), risk, and priority of repayment on default.
+\end{itemize}
 
+Advantages and disadvantages of MBS according to \textcite{MBSInvestopedia}:
+\begin{itemize}
+    \item \textbf{Attractive yield}: MBS pay a fixed interest rate that is usually higher than U.S. government bonds, and pays out each month, where other bonds have other structures, such as one single payment at maturity 
+    \item \textbf{Safe Investments}: MBS are considered relativly low-risk. If the MBS is guaranteed by the government or otherwise insured, investors do not have to worry about defaults. Since an MBS is well diversifed with multiple mortages, the risk is diversified. 
+    \item \textbf{Detached from the rest of the market}: There is a relativly low correlation between MBS and corporate bonds or the stock market.
+    \item \textbf{Prepayment risk}: If borrowers pay off their loans early or refinance their loans it may negativly impact returns. 
+    \item \textbf{Interst rate risk}: If interest rates increase, new amount of new mortages decrease, causing the housing market to decrease, and value of the MBS will drop.
+\end{itemize}
+
+A Collateralized Debt Obligation (CDO) can be seen as a generalization of MBS/CMO where the underlying assets is not only mortages, but any cash-flow generating assets, such as automobile loans, credit cards, and aircraft leases, in different tranches (differnt maturites, yields, and risks).
+
+Syntethic CDOs are bets or wagers put on the performance of a CDO, essentially leveraging the CDO multiple times for greater profit or greater loss. Synthetic CDOs on CDOs of MBSs, underneath it all backed by \textit{"dogshit"} mortages, was one of the major cause of the great recession of 2008, and these synthetic CDOs was aptly named, again by the big short movie, \textit{"dogshit wrapped in catshit"}. 
+
+MBS, CMO, and CDOs, are in the authors opinion, a generally good idea to pool together underlying assets or debts to diversify risk into simple instruments, however it is clear that this system was massivly perverted in the 2000s, leading to the great recission of 2008.
+
+\subsection{The great recession of 2008}
+
+Bailout: The Federal Reserve bought \$4.5 trillion of MBS \cite{MBSInvestopedia}.
+
+
+\subsection{The oncomming storm of 2023}
+Assets become increasingly centralized in a few banks. A collapse in one of these banks...
 
 \subsection{100\% Reserve Banking}
-In contrast, a 100\% Reserve Banking (100RB) system requires banks to hold the entire amount of their customers' deposits as reserves. In general, this means that banks cannot create new money through lending and act more like safe deposit institutions. The 100\% reserve banking system can reduce the risk of bank runs and financial crises but may also constrain credit creation and economic growth.     
-
+In contrast, a 100\% Reserve Banking (100RB) system requires banks to hold the entire amount of their customers' deposits as reserves. In general, this means that banks cannot create new money through lending and act more like safe deposit institutions. The 100\% reserve banking system can reduce the risk of bank runs and financial crises but may also constrain credit creation and economic growth.
 
 Several approaches towards a 100RB system exist:
 
 \begin{itemize}
-    \item The Chicago Plan \cite{fisher1936} developed by economists during the 1930s, proposes separating monetary and credit functions of the banking system by requiring 100% reserves for deposits and centralizing money issuance. This aims to reduce bank runs, financial crises, and inflation risks while allowing more effective monetary policy management. The plan's key features include a 100% reserve requirement, separating credit and money creation, and government control of money issuance. Critics argue that the plan may constrain credit creation and economic growth. Fisher (RD-1) claimed the following advantages:
+    \item The Chicago Plan \cite{fisher1936} developed by economists during the 1930s, proposes separating monetary and credit functions of the banking system by requiring 100\% reserves for deposits and centralizing money issuance. This aims to reduce bank runs, financial crises, and inflation risks while allowing more effective monetary policy management. The plan's key features include a 100\% reserve requirement, separating credit and money creation, and government control of money issuance. Critics argue that the plan may constrain credit creation and economic growth. \textcite{fisher1936} claimed the following advantages:
     \begin{enumerate}
         \item Much better control of a major source of business cycle fluctuations, sudden increases and contractions of bank credit and of the supply of bank-created money.
         \item Complete elimination of bank runs.
         \item Dramatic reduction of the (net) public debt.
         \item Dramatic reduction of private debt, as money creation no longer requires simultaneous debt creation.
         \end{enumerate}
-        \item The Chicago Plan Revisited \cite{chicagorevisited} from 2012 revisits the idea within the modern economy of the US and finds support for all of Fisher's (RD-1) claims. Additionally, output gains approach 10%, and steady-state inflation can drop to zero.
-        \item 2018 Swiss citizens’ (popular) initiative, ‘For crisis-safe money: Money creation by the National Bank only! (Sovereign Money Initiative)’ \cite{SwizzInitiative}. The initiative was defeated with 442k yes votes and 1379k no votes. The Federal Council and Parliament were against the initiative due to no precedent in any country for this type of system, a radical departure from the current system, which they claim to work well and has taken effective measures to improve financial stability, and that the national bank would receive an undesirable level of power.
+        \item The Chicago Plan Revisited \cite{chicagorevisited} from International Monetary Fund (IMF) in 2012 revisits the idea within the modern economy of the US and finds support for all of \textcite{fisher1936} claims. Additionally, output gains approach 10\%, and steady-state inflation can drop to zero.
+        \item 2018 Swiss citizens’ (popular) initiative, \textit{‘For crisis-safe money: Money creation by the National Bank only! (Sovereign Money Initiative)’} \cite{SwizzInitiative}. The initiative was defeated with 442k yes votes and 1379k no votes. The Federal Council and Parliament were against the initiative due to no precedent in any country for this type of system, a radical departure from the current system, which they claim to work well and has taken effective measures to improve financial stability, and that the national bank would receive an undesirable level of power.
         \item In the aftermath of the 2008 financial crisis in Iceland, a study on monetary and banking reform \cite{IcelandReport} was commissioned in 2015 by the prime minister. A Sovereign Money System was strongly considered, but no further action was taken.
 \end{itemize}
 
