--- a/article/thesis.bib
+++ b/article/thesis.bib
@@ -33,7 +33,7 @@ note = {(Accessed on 02/16/2023)}
 author = {Frosti Sigurjónsson},
 title = {MONETARY REFORM - A BETTER MONETARY SYSTEM FOR ICELAND},
 howpublished = {\url{https://www.government.is/media/forsaetisraduneyti-media/media/Skyrslur/monetary-reform.pdf}},
-month = {March},
+month = {3},
 year = {2015},
 note = {(Accessed on 02/16/2023)}
 }
@@ -42,7 +42,7 @@ note = {(Accessed on 02/16/2023)}
 author = {Scott Nevil},
 title = {Fractional Reserve Banking: What It Is and How It Works},
 howpublished = {\url{https://www.investopedia.com/terms/f/fractionalreservebanking.asp}},
-month = {December},
+month = {12},
 year = {2022},
 note = {(Accessed on 03/16/2023)}
 }
@@ -74,7 +74,7 @@ note = {(Accessed on 03/16/2023)}
 author = {OSIKHOTSALI MOMOH},
 title = {What Is Monetarism? Theory, Formula, and Comparison to Keynesian Economics},
 howpublished = {\url{https://www.investopedia.com/terms/m/monetarism.asp}},
-month = {July},
+month = {7},
 year = {2021},
 note = {(Accessed on 03/18/2023)}
 }
@@ -83,7 +83,21 @@ note = {(Accessed on 03/18/2023)}
 author = {JULIA KAGAN},
 title = {Mortgage-Backed Securities (MBS) Definition: Types of Investment},
 howpublished = {\url{https://www.investopedia.com/terms/m/mbs.asp}},
-month = {February},
+month = {2},
 year = {2023},
 note = {(Accessed on 03/18/2023)}
+}
+
+@misc{thebigshort,
+author = {Adam McKay},
+title = {The Big Short},
+year = {2015},
+publisher = {Paramount Pictures}
+}
+
+@book{berger2020tarp,
+  title={TARP and other bank bailouts and bail-ins around the world: Connecting Wall Street, Main Street, and the financial system},
+  author={Berger, Allen N and Roman, Raluca A},
+  year={2020},
+  publisher={Academic Press}
 }
