Add Soverign Money System

--- a/article/sections/background.tex
+++ b/article/sections/background.tex
@@ -85,5 +85,25 @@ Several approaches towards a 100RB system exist:
 \end{itemize}
 
 \subsection{Sovereign Money System (SMS)}
+\textcite{Stellinga2021} brlilianty summarizes the history, workings, and different proposals of the Soverign Money System. This section will summarize this work, without citing specifics works. TODO expand this section to find and argue for the best alternative.
 
-\subsubsection{The economy of cryptocurrencies and other Decentralized Digital Assets (DDA)}
+In a Soverign Money System, all money is held at a central bank or in entites where deposits are 100\% backed by reserves at the central bank or government bonds. Entites must legally and financially seperate payment accounts with customers deposit from other activites, such as investing. 
+
+Configuration options 
+\begin{itemize}
+    \item Commerical banks have a full 100\% reserve in central banks on deposits.
+    \item Commercial banks have a full 100\% reserve in liquid aseets, such as government bonds, on deposits.
+    \item Customers deposits into a payment account at the central bank.
+    \item Financed by debt, where customers place deposit into an investment account, and the commercial bank can then invest these funds in for example loans. The loans can still have a money multiplier effect, and customers can still withdraw their deposits before the underlying assets have reached maturity. This configuration is therefor succeptible to many of the issues of FRB, and can generally be seen as a more slow-moving FRB system.
+    \item Financed by equity, where entites sell shares to raise funds to invest, essentially becoming investment funds. All shareholders will share profits or losses. If a shareholder wants to withdraw or use their money, they can sell their share. 
+    \item \textcite{chicagorevisited} allow for the option that commerical banks can be financed by central banks trough loans however other proposals are more cautious of this configuration.   
+    \item Money creation is directly shifted to the central bank instead of commerical banks in the current system. 
+\end{itemize}
+
+In the SMS system, banks cannot create deposits out of loans out of thin air, but have to raise the money. 
+
+\subsection{The economy of cryptocurrencies and other Decentralized Digital Assets (DDA)}
+One of the primary tenets behind cryptocurrencies, tokens, stablecoins and other variants of Decentralized Digital Assets (DDA) in general is having full control of your own money. Most DDAs are not invested or otherwise put to use and therefore align more to the 100RB and SMS system over the current FRB system, in-fact, the author (todo argue) would argue that DDAs can be described as a Self-Soverign Money (SSM) system that share most of the similarities, advantages, and disadvantages of the 100RB/SMS system. The 100RB/SMS system is designed for a single country or economy, while SSM is inherently a global system. The SSM system can therefor be seen as an extension and a complement to national 100RB/SMS systems.
+
+\subsection{Central Bank Digital Currency (CBDC)}
+CBDC may be an implementation of 100RB. However, the fed stated that the issuance of CBDC may be limited per person to not draw money out from the banking system... CBDCs may not align with the current FRB system, or if it does, the goal must probably be to replace cash with digial cash, aka only a small percentage of total money (2-3̭\%??). 
