--- a/article/thesis.bib
+++ b/article/thesis.bib
@@ -101,3 +101,20 @@ publisher = {Paramount Pictures}
   year={2020},
   publisher={Academic Press}
 }
+
+@Inbook{Stellinga2021,
+author="Stellinga, Bart
+and de Hoog, Josta
+and van Riel, Arthur
+and de Vries, Casper",
+title="How Does the Sovereign Money System Work?",
+bookTitle="Money and Debt: The Public Role of Banks",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="117--137",
+abstract="This chapter addresses the broad outlines of a sovereign money system as advocated in recent proposals. In such a system, money can only be created by the central bank, and the institutions that lend money (we call them financing institutions) are strictly separated from those that make up the payment system. We do not delve into the details of each proposal but focus on their overarching characteristics. We first outline what these proposals imply for the payment system as well as for investing and lending. We then turn to the government's role and responsibilities in the new system, including how money is created and enters society, and discuss transition paths to the new system.",
+isbn="978-3-030-70250-2",
+doi="10.1007/978-3-030-70250-2_5",
+url="https://doi.org/10.1007/978-3-030-70250-2_5"
+}
